--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,13 @@
 <div class="disclaimer">
   {% if site.theme.show_disclaimer %}
   <p>
-    The postings on this site are my own and don't necessarily represent my 
-    employer’s positions, strategies or opinions.
+    The articles on this site are my own and while every attempt has been made to ensure their accuracy any misfortune that happens upon a reader is of no fault to bananafish.es
   </p>
   {% endif %}
 
   <p>
-    © {{ site.theme.name }}, 2013 &mdash; built with Jekyll using Lagom theme
+    All articles unless otherwise stated are in the Public domain.
   </p>
+<p>generated on: {{ site.time }}</p>
+
 </div>
