--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,20 +1,12 @@
 <nav>
-  <h1>Hi.</h1>
+  <h1>welcome.</h1>
   <a href="/">
-    <img src="/logo.png" id="logo" alt="Blog logo"/>
+    <img src="/img/logo.png" id="logo" alt="Blog logo"/>
   </a>
-  <h2>I'm <a href="/">{{ site.theme.name }}</a>.</h2>
+  <h2>banana-wiki v6 <a href="/"></a>.</h2>
   <hr/>
   <ul>
-  <p>A brief bio or something witty.</p>
-  <p>
-    Edit me in <code>_includes/sidebar.html</code>
-  </p>
+  <p>articles for my own use and for others</p>
   <hr/>
-  <div>
-    <div id="social">
-      {% include social.html %}
-    </div>
-  </div>
   </ul>
 </nav>
