I think I am happy with this now

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,13 @@
 <div class="disclaimer">
   {% if site.theme.show_disclaimer %}
   <p>
-    The articles on this site are my own and while every attempt has been made to ensure their accuracy any misfortune that happens upon a reader is of no fault to bananafish.es
+    The articles on this site are my own and while every attempt has been made to ensure their accuracy any misfortune that happens upon a reader is of no fault to bananafish.in
   </p>
   {% endif %}
 
   <p>
     All articles unless otherwise stated are in the Public domain.
   </p>
-<p>generated on: {{ site.time }}</p>
+<p>site last generated on: {{ site.time }}</p>
 
 </div>
