--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,8 @@
   <h2>banana-wiki v6 <a href="/"></a>.</h2>
   <hr/>
   <ul>
-  <p>articles for my own use and for others</p>
+  <p>articles for my own use</p><p>...and for others</p>
+  <h3> I know the articles are still a mess, Im going to fix soon</h3>
   <hr/>
   </ul>
 </nav>
