--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,8 +15,8 @@ layout: default
   {{ content }}
 </div>
 
-<div id="related">
-  <h3>Related Posts</h3>
+<!-- <div id="related">
+ <h3>Related Posts</h3>
   <ul class="posts">
     {% for post in site.related_posts limit:3 %}
     <li>
@@ -25,3 +25,4 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+-->
